Add Ingredients, Add Directions, Ingredients Class

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,16 +27,18 @@
     <string name="attachment_summary_off">Only download attachments when manually requested</string>
 
     <!-- Spinner for measurement of ingredients in the recipe post page -->
-    <string-array name="measurememnt">
+    <string-array name="measurememntUnits">
         <item>Measurement</item>
-        <item>Cup</item>
-        <item>Tablespoon</item>
-        <item>Teaspoon</item>
+        <item>Cups</item>
+        <item>Tablespoons</item>
+        <item>Teaspoons</item>
         <item>Pounds(lb)</item>
-        <item>Ounces</item>
-        <item>Gram(g)</item>
-        <item>Milligram(mg)</item>
-        <item>Milliliter(mL)</item>
+        <item>Ounces(oz)</item>
+        <item>Fluid Ounces</item>
+        <item>Grams(g)</item>
+        <item>Milligrams(mg)</item>
+        <item>Liters(L)</item>
+        <item>Milliliters(mL)</item>
     </string-array>
 
 
